# profile_generator

./: README.md  app.py  gitignore  gitlab-ci.yml  pyproject.toml
pages/: 1Building_SLP.py  2Industrial_SLP.py  3Emobility_SLP.py
src/demandlib/: particular_profiles.py
src/demandlib/bdew/: elec_slp.py  heat_building.py
src/moduel/: CoolingProfileGenerator.py  DataFileImporter.py  Data_Model.py  ProfileRunner.py  Pydantic_validification.py  Visualizer.py
streamlit_component/: DataInput.py
tests/: test_cooling_profile.py  test_elec_slp.py  test_heat_building.py  test_profile_runner.py  test_visualizer.py
