[tool.poetry]
name = "Streamlit demo"
version = "0.1.1"
description = ""
authors = ["lukas.hoettecke <lukas.hoettecke@siemens.com>"]

[tool.poetry.dependencies]
python = ">=3.10, < 4.0"
matplotlib = "^3.5.1"
streamlit = "^1.23.1"
plotly = "^5.13.0"
pandas = "^1.3.0"
numpy = "^1.21.0"
holidays = "^0.11.2"
pytest = "^7.4.0"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.1"
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
